--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.20.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^4.0.0",
     "express": "^4.16.4",
     "method-override": "^2.3.10",
-    "mongoose": "^5.1.1",
+    "mongoose": "^8.18.0",
     "morgan": "^1.9.1",
     "pug": "^3.0.1",
     "serve-favicon": "~2.4.5",
