Add uploads directory to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -233,4 +233,6 @@ dist
 .history
 .ionide
 
+uploads/
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,linux,java,node
