--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "^4.16.4",
     "method-override": "^2.3.10",
     "mongoose": "^8.18.0",
-    "mongoose-paginate": "^5.0.3",
+    "mongoose-paginate-v2": "^1.9.1",
     "morgan": "^1.9.1",
     "multer": "^2.0.2",
     "pug": "^3.0.1",
